Small fixes and scrollbar styling

--- a/src/frontend/static/css/styles.css
+++ b/src/frontend/static/css/styles.css
@@ -23,7 +23,7 @@ body {
 }
 
 body {
-  background: url('../images/background.png') no-repeat center/cover;
+  background: url('../images/background-dark.svg') no-repeat center/cover;
 }
 
 strong {
@@ -41,7 +41,7 @@ main {
 }
 
 .left {
-  background: url('../images/logo.svg') no-repeat top 3rem right 1.5rem;
+  background: url('../images/logo.svg') no-repeat top 5% right 3% / auto 9%;
   position: relative;
   display: flex;
   align-items: flex-end;
@@ -76,6 +76,22 @@ main {
   height: 86%;
   padding: 0 4rem 0 3rem;
   overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: #e43366 rgba(228, 51, 102, 0.5);
+}
+
+.scrollContainer::-webkit-scrollbar {
+  display: block;
+  width: 0.625rem;
+}
+
+.scrollContainer::-webkit-scrollbar-track {
+  background: rgba(228, 51, 102, 0.5);
+}
+
+.scrollContainer::-webkit-scrollbar-thumb {
+  background: #e43366;
+  border-radius: 0.375rem;
 }
 
 .info {
@@ -225,7 +241,7 @@ main {
   left: 20%;
   display: flex;
   flex-direction: column;
-  width: calc(402rem / 16);
+  width: 60%;
   font-family: 'Overpass Regular';
   font-size: 1.5rem;
   line-height: 2.25rem;
